
EXTRA_DIST = README.md
EXTRA_DIST += counttestset.sh
EXTRA_DIST += runalltests.sh
EXTRA_DIST += runalltests_spa.sh
EXTRA_DIST += runtestset.sh
EXTRA_DIST += reports/1995.bus.3B.sum
EXTRA_DIST += reports/1995.doe3.3B.sum
EXTRA_DIST += reports/1995.mag.3B.sum
EXTRA_DIST += reports/1995.news.3B.sum
EXTRA_DIST += reports/2.03.summary
EXTRA_DIST += reports/2.04.summary
